# MapReduce

./: .gitignore  CMakeLists.txt  README.md  matrixmult.cpp  part3.cpp  sort.cpp  wordcount.cpp
MapReducer/: CMakeLists.txt  MapReducer.h  MapReducer.hpp
Report-profiling-data/Report/: 351-L3-report.tex
Report-profiling-data/timing-and-callgrind/: lipsum50.txt
Report-profiling-data/timing-and-callgrind/Callgrind/: callgrind-output-legend.txt  callgrind.out.16709  callgrind.out.16980  callgrind.out.41888  callgrind.out.41928  callgrind.out.77530
examples/matrixmult/: Makefile  matrixmult.cpp
examples/sort/: Makefile  sort.cpp
examples/wordcount/: Makefile  wordcount.cpp
include/: MapReducer.hpp
scripts/: data.csv  script.r  sort-data.csv  sort-script.r
submissionLab3/: CMakeLists.txt  README.md  part3.cpp  wordcount.cpp
submissionLab3/MapReducer/: CMakeLists.txt
submissionLab4/: Makefile  MapReducer.hpp  README.txt  wordcount  wordcount.cpp
